--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Pragati Verma Resume</title>
+  <title>Vijay Kumar Prajapati</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <!-- <iframe src="https://docs.google.com/viewer?url=https://github.com/PragatiVerma18/Resume/blob/master/Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe> -->
